# libleaconfig

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autoclean.sh  config.c  config.h  configure.ac  conftest.c
include/: Makefile.am
include/libleaconfig/: Makefile.am  leaconfig.h
libleaconfig/: Makefile.am  leaconfig.c
src/: Makefile.am  conftest.c  testconf.conf
